--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">About Canada</string>
     <string name="no_internet_connection">No Internet Connection Available</string>
+    <string name="error_message">Something went wrong</string>
 </resources>
